vincent/nlb-clouddriver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spin
    cluster: spin-clouddriver
  name: spin-clouddriver-kubesvc
  annotations: 
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  namespace: vincent
spec:
  ports:
  - name: grpc
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app: spin
    cluster: spin-clouddriver
  sessionAffinity: None
  type: LoadBalancer
