vincent/ingress-grpc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-grpc
  namespace: vincent
  labels:
    app: "spin"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    # nginx.ingress.kuberentes.io/proxy-buffer-size: "64k"  #debugging
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"  #<-- MTLS
    nginx.ingress.kubernetes.io/secure-backends: "true"  #<-- MTLS
spec:
  rules:
  - host: vincent-clouddriver.se.armory.io
    http:
      paths:
      - backend:
          serviceName: spin-clouddriver
          servicePort: 9091
        path: /
  # tls:
  # - hosts:
  #   - vincent-clouddriver.se.armory.io
  #   secretName: vincent-clouddriver-cert
